# libdwarfpp

./: .gitignore  .gitmodules  .hgignore  Doxyfile  LICENSE  Makefile  Makefile.am  README  TODO  acinclude.m4  adt-gen-simple.py  adt-gen.py  config.h.in  config.mk.in  configure.ac  dump-enums.cpp  gen-adt-cpp.py  libdwarfpp.pc.in
.circleci/: config.yml
Old/: Makefile  adt-gen.py  adt-gen.py.orig  dwarfpp-boost.cpp  dwarfpp.cpp  dwarfpp.h  dwarfpp.hpp  dwarfpp_simple.cpp  dwarfpp_simple.hpp  dwarfpp_util.cpp  libdwarfpp.i  libdwarfpp_py++.py  test-dwarfpp.py
Old/include/dwarfpp/: abstract.hpp.m4  encap-OLD.hpp  encap_adt-OLD.hpp.m4  stacking_dieset.hpp
Old/libdwarf-swig/: Makefile  libdwarf.i
Old/readelf-parser/: Makefile  test-object
Old/src/: encap_adt-OLD.cpp  stacking_dieset.cpp-moved
contrib/: Makefile
examples/: Makefile  compare-types.cpp  core-query.cpp  coretest.cpp  dwarfhpp.cpp  dwarfhpp.hpp  dwarfppdump.cpp  dwarfpplibdump.cpp  eh-frame-hdr.cpp  print_spec.cpp  query.cpp  sranges.cpp  subseq.cpp
include/dwarfpp/: Makefile  abstract-inl.hpp  abstract.hpp  abstract_preamble_gen.inc  adt.hpp  attr.hpp  config.h.in  core.hpp  cxx_compiler.hpp  cxx_dependency_order.hpp  cxx_model.hpp  dies-inl.hpp  dies.hpp  dwarf3-adt.h  dwarf3-factory.h  dwarflib-handles.hpp  dwarflib.hpp  encap.hpp  encap_adt.hpp.m4  encap_graph.hpp  encap_preamble_gen.inc  encap_sibling_graph.hpp  encap_typedefs_gen.inc  expr.hpp  frame.hpp  iter-inl.hpp  iter.hpp  lib.hpp  libdwarf-handles.hpp  libdwarf.hpp  opt.hpp  regs.hpp  root-inl.hpp  root.hpp  spec.hpp  spec_adt.hpp  util.hpp
include/dwarfpp/private/: libdwarf-handles.hpp  libdwarf.hpp
libdwarfpp/: adt-gen.py  adt_test.cpp  gen-adt-cpp.py  module.cpp.old
libdwarfpp/Old/: dwarfpp.py  dwarfpp_test.cpp  dwarfpp_util.hpp
libdwarfpp/Old/libdwarf-swig/: dwarf.py  help-mail.txt  libdwarf_wrap.c
libdwarfpp/Old/readelf-parser/: readelf-parser-test  readelf.g
libdwarfpp/examples/: Makefile  dwarfhpp.cpp  dwarfhpp.hpp  dwarfppdump.cpp  query.cpp  test-expanded.cpp-moved  test.cpp
libdwarfpp/include/: Makefile
libdwarfpp/include/dwarfpp/: adt.hpp  encap.hpp  encap_sibling_graph.hpp  lib.hpp
libdwarfpp/src/: Makefile  attr.cpp  encap_adt.cpp
libdwarfpp/tests/: test-1.cpp  test-10-input  test-10.cpp
spec/: dwarf3.py  dwarf_current.py  gen-adt-cpp.py  gen-factory-cpp.py  gen-tagpreds-cpp.py
src/: Makefile  abstract.cpp  adt.cpp  attr.cpp  cxx_compiler.cpp  cxx_dependency_order.cpp  cxx_model.cpp  dies.cpp  dwarflib-data.cpp  dwarflib-handles.cpp  encap.cpp  encap_adt.cpp  encap_factory_gen.inc  expr.cpp  frame.cpp  iter.cpp  lib.cpp  libdwarf-data.cpp  libdwarf-handles.cpp  libdwarf.cpp  regs.cpp  rep.cpp  root.cpp  spec.cpp  util.cpp
src/spec/: adt-gen.py
tests/: Makefile  Makerules  core-variadiccore-variadic.cpp  coretest.cpp  dfs-seqdfs-seq.cpp  test-1-input  test-2-input.c  test-4-input.c  test-children-adt.cpp  test-iterator-comp.cpp  test-siblings-adt.cpp  visible-named-corevisible-named-core.cpp
tests/Old/: Makefile  test-1-input  test-10-input.c  test-5.cpp  test-recursive.c
tests/Performance/: test-object.c
tests/Rotted/: test-2.cpp  test-3.cpp  test-4.cpp  test-6.cpp  test-7.cpp  test-8.cpp  test-9.cpp
tests/Rotted/iterator-comp/: iterator-comp.cpp
tests/all-sccs/: all-sccs.cpp
tests/bfs-adt/: test-bfs-adt.cpp
tests/core-bfs/: core-bfs.cpp
tests/core-variadic/: core-variadic.cpp
tests/coretest/: coretest.cpp
tests/fde-decode/: fde-decode.cpp
tests/fde-print/: fde-print.cpp
tests/grandchildren/: grandchildren.cpp
tests/live-dies/: live-dies.cpp
tests/make-dies/: make-dies.cpp
tests/resolve/: resolve.cpp
tests/siblings-adt/: siblings-adt.cpp
tests/siblings-core/: siblings-core.cpp
tests/timed-dump-core/: exit-centiseconds.sh  exit-deciseconds.sh  timed-dump-core.cpp
tests/type-equality/: hello.c  include.mk  type-equality.cpp
tests/type-iterators/: type-iterators.cpp
tests/type-scc/: type-scc.cpp
tests/visible-named/: test-visible-named.cpp  visible-named.cpp
tests/visible-named-core/: visible-named-core.cpp
